added 2 new routes and the notification plugin

--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/contacts.js"></script>
+        <script src="scripts/controllers/alarm.js"></script>
         <!-- endbuild -->
 </body>
 </html>
