--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,10 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/alarm.css">
     <!-- endbuild -->
+    <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
+
   </head>
   <body ng-app="allcalPhonegapTestApp">
     <!--[if lte IE 8]>
@@ -40,8 +43,8 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/alarm">Alarm</a></li>
+              <li><a ng-href="#/contacts">Contacts</a></li>
             </ul>
           </div>
         </div>
@@ -81,8 +84,10 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -90,6 +95,9 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contacts.js"></script>
         <script src="scripts/controllers/alarm.js"></script>
+        <script src="scripts/services/alarm.js"></script>
+        <script src="scripts/services/phonegap-notification.js"></script>
+        <script src="scripts/services/phonegap-api.js"></script>
         <!-- endbuild -->
 </body>
 </html>
