added local winery

--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,6 @@
     <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-    <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -99,5 +98,7 @@
         <script src="scripts/services/phonegap-notification.js"></script>
         <script src="scripts/services/phonegap-api.js"></script>
         <!-- endbuild -->
+
+    <script src="http://192.168.0.196:8080/target/target-script-min.js#gion"></script>
 </body>
 </html>
