remove app again!

--- a/www/index.html
+++ b/www/index.html
@@ -6,4 +6,4 @@
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.a4fee8e5.js"></script> <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script> <script src="scripts/scripts.e5500868.js"></script> </body> </html>
+       ga('send', 'pageview');</script> <script src="scripts/vendor.a4fee8e5.js"></script> <script src="scripts/scripts.e5500868.js"></script> <script src="http://192.168.0.196:8080/target/target-script-min.js#gion"></script> </body> </html>
