added phonegap api script

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,8 @@
       </div>
     </div>
 
+    <!-- added phonegap api link. the file doesn't exist, but it will be injected by the phonegap build service -->
+    <script type="text/javascript" src="cordova.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
