--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/allmighty-autocomplete/style/autocomplete.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -87,6 +88,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -99,6 +101,7 @@
         <script src="scripts/services/alarm.js"></script>
         <script src="scripts/services/phonegap-notification.js"></script>
         <script src="scripts/services/phonegap-api.js"></script>
+        <script src="scripts/services/contacts.js"></script>
         <!-- endbuild -->
 
     <script src="http://192.168.0.196:8080/target/target-script-min.js#gion"></script>
