--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,12 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/allmighty-autocomplete/style/autocomplete.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/alarm.css">
+    <link rel="stylesheet" href="styles/contacts.css">
     <!-- endbuild -->
     <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 
@@ -88,7 +88,6 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/moment/moment.js"></script>
-    <script src="bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
