--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,8 @@
        ga('send', 'pageview');
     </script>
 
+    <script src="//maps.google.com/maps/api/js"></script>
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
