--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/alarm.css">
     <link rel="stylesheet" href="styles/contacts.css">
+    <link rel="stylesheet" href="styles/geolocation.css">
+    <link rel="stylesheet" href="styles/loader.css">
     <!-- endbuild -->
     <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 
@@ -46,6 +48,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/alarm">Alarm</a></li>
               <li><a ng-href="#/contacts">Contacts</a></li>
+              <li><a ng-href="#/geolocation">Event location</a></li>
             </ul>
           </div>
         </div>
@@ -53,12 +56,12 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+      <div ng-view=""></div>
     </div>
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from <a href="https://careers.stackoverflow.com/gion">Gion</a> &amp; the Yeoman team</p>
       </div>
     </div>
 
@@ -90,6 +93,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -103,6 +107,8 @@
         <script src="scripts/services/phonegap-notification.js"></script>
         <script src="scripts/services/phonegap-api.js"></script>
         <script src="scripts/services/contacts.js"></script>
+        <script src="scripts/controllers/geolocation.js"></script>
+        <script src="scripts/services/geocoder.js"></script>
         <!-- endbuild -->
 
     <script src="http://192.168.0.196:8080/target/target-script-min.js#gion"></script>
