phonegap ready -> geolocation -> map

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
+    <script src="bower_components/angular-phonegap-ready/ready.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
