--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
        ga('send', 'pageview');
     </script>
 
-    <script src="//maps.google.com/maps/api/js"></script>
+    <script src="https://maps.google.com/maps/api/js"></script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
