--- a/www/index.html
+++ b/www/index.html
@@ -6,4 +6,4 @@
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="//maps.google.com/maps/api/js"></script> <script src="scripts/vendor.d91ef31d.js"></script> <script src="scripts/scripts.05bc2f48.js"></script> <script src="http://192.168.0.196:8080/target/target-script-min.js#gion"></script> </body> </html>
+       ga('send', 'pageview');</script> <script src="https://maps.google.com/maps/api/js"></script> <script src="scripts/vendor.d91ef31d.js"></script> <script src="scripts/scripts.dc6a7a8d.js"></script> <script src="http://192.168.0.196:8080/target/target-script-min.js#gion"></script> </body> </html>
