--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
 
     <div class="container">
       <div ng-view=""></div>
+      <div id="map" style="border: 5px dashed red; width: 100%;height: 400px;margin: 10px;padding: 10px;"></div>
     </div>
 
     <div class="footer">
@@ -78,8 +79,6 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-
-    <script src="//maps.google.com/maps/api/js"></script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -112,6 +111,12 @@
         <script src="scripts/services/geocoder.js"></script>
         <!-- endbuild -->
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5a-L4dpBaneZ2oKfasJFWYw1-ez-wdP4"></script>
     <script src="http://192.168.0.196:8080/target/target-script-min.js#gion"></script>
+
+    <!-- build:js({.tmp,app}) scripts/map-test.js -->
+    <script src="scripts/maps-test.js"></script>
+    <!-- endbuild -->
+
 </body>
 </html>
